<?xml version="1.0"?>
<package format="2">
  <name>cpr_indoornav_tests</name>
  <version>0.3.1</version>
  <description>Additional testing scripts to verify IndoorNav</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <license>Clearpath Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cpr_indoornav_base</exec_depend>

  <export>
  </export>
</package>
